src/css/profile/mobile/changeable/common/textinput.less
@keyframes EXPAND {
	0% {
		opacity: 1;
		.transform(translate(-50%, -50%) scale(1));
	}
	50% {
		opacity: 1;
		.transform(translate(-50%, -50%) scale(1.3));
	}
	100% {
		opacity: 0;
		.transform(translate(-50%, -50%) scale(1.3));
	}
}

input, textarea {
	font-family: @font_family;

	&::-webkit-input-placeholder {
		text-shadow: 0 0 0 @color_textinput_placeholder;
	}

	&.ui-text-input-disabled,
	&:disabled {
		&::-webkit-input-placeholder {
			text-shadow: 0 0 0 @color_textinput_placeholder_text_dim;
		}
	}
}

.ui-text-input-container {
	width: 100%;
}

textarea.ui-text-input {
	resize: none;
	overflow: hidden;
	white-space: normal;
	.transition(height 200ms linear);
}

.ui-group-index {
	+ .ui-li-static {
		input,
		textarea {
			&.ui-text-input {
				padding: 0 26 * @unit_base 0 10 * @unit_base;

				+ .ui-text-input-textline {
					margin: 11 * @unit_base 16 * @unit_base 20 * @unit_base 0 * @unit_base;
				}

				~ .ui-text-input-clear {
					margin-right: 0;
					right: 0;
				}

				&:focus.ui-text-input-clear-active {
					padding-right: 80 * @unit_base;
				}
			}
		}
	}
}

.ui-li-static {
	input,
	textarea {
		&.ui-text-input {
			padding: 0 10 * @unit_base 0 10 * @unit_base;

			+ .ui-text-input-textline {
				margin: 11 * @unit_base 0 20 * @unit_base 0;
				position: absolute;
				width: calc(~"100% - "64 * @unit_base);

			}

			~ .ui-text-input-clear {
				right: -36 * @unit_base;
			}
		}
	}
}

.ui-li-flex {
	input,
	textarea {
		&.ui-text-input {
			padding: 0 10 * @unit_base;

			+ .ui-text-input-textline {
				margin: 11 * @unit_base 0 -12 * @unit_base 0;
			}

			~ .ui-text-input-clear {
				top: 0;
				margin-top: -70 * @unit_base;
				margin-bottom: -12 * @unit_base;
				right: 0;
			}
		}
	}
}

.ui-popup {
	textarea.ui-text-input {
		min-height: 54 * @unit_base;
		padding: 0;
		+ .ui-text-input-textline {
			margin-left: 0;
			margin-right: 0;
			margin-bottom: 11 * @unit_base;
		}
	}
}

input.ui-text-input,
textarea.ui-text-input {
	border: 0;
	padding: 33 * @unit_base 42 * @unit_base 0 42 * @unit_base;
	.appearance(none);
	box-sizing: border-box;
	display: block;
	width: 100%;
	line-height: 54 * @unit_base;

	color: @color_textinput_cursor;
	text-shadow: 0 0 0 @color_textinput_text;
	-webkit-text-fill-color: transparent;
	font-size: @font_size_textinput_text;
	background-color: transparent;
	border: none;

	&:focus {
		outline: none;
		color: @color_textinput_cursor;
		text-shadow: 0 0 0 @color_textinput_text_edit;

		&.ui-text-input-clear-active {
			padding-right: 23 * @unit_base;
		}
	}

	& + .ui-text-input-textline {
		height: 2 * @unit_base;
		background: @color_textinput_textline_dim;

		box-sizing: border-box;
		display: block;
		margin: 11 * @unit_base 32 * @unit_base 20 * @unit_base 32 * @unit_base;
	}

	&:focus + .ui-text-input-textline {
		background: @color_textinput_textline;
	}

	& ~ .ui-text-input-clear {
		display: block;
		float: right;
		top: -67 * @unit_base;
		box-sizing: border-box;
		margin-right: -17 * @unit_base;
		margin-left: 17 * @unit_base;
		position: relative;
		width: 80 * @unit_base;
		height: 80 * @unit_base;
	}
	& ~ .ui-text-input-clear.ui-btn.ui-btn-icon.ui-btn-nobg::after {
		mask-image: url("images/controls/core_button_icon_clear.png");
		width: 80 * @unit_base;
		height: 80 * @unit_base;
	}

	& ~ .ui-text-input-clear-hidden {
		visibility: hidden;
	}
}

/*special case of buttons and text-inputs:
- wrapper is added
- animation for buttons on white background
*/
.ui-textinput-box-with-right-button {
	.display-flex();
	.flex-wrap(nowrap);
	.align-items(center);
	height: 80 * @unit_base;

	> * {
		height: 67 * @unit_base;
		margin-top: 7 * @unit_base;
		flex-grow: 1;
	}

	button, a {
		&.ui-btn:not(.ui-btn-circle):not(.ui-btn-nobg):not(.ui-floatingactions-item), .ui-btn.ui-btn-nobg {
			max-width: 128 * @unit_base;
			min-width: 80 * @unit_base;
			.flex-basis(auto);
			.order(1);
			width: auto;
			box-sizing: content-box;
			margin: 0 20 * @unit_base 0 0;
			height: 80 * @unit_base;
			min-height: 80 * @unit_base;
			max-height: 80 * @unit_base;
			padding: 0 12 * @unit_base;
			background-color: transparent;
			overflow-x: visible;
			overflow-y: visible;
			color: rgba(82, 199, 217, 1);
			-webkit-mask-box-image-source: none;
			.align-self(flex-start);

			&::after {
				background-color: rgba(82, 199, 217, 1);
			}

			&::before {
				background-color: @color_button_icon_nobg_press_effect;
				opacity: 0;
			}

			&.ui-btn-active::before {
				.animation(EXPAND 200ms);
				.animation-fill-mode(both);
				opacity: 0;
			}

			&.ui-btn-icon {
				padding: 0 17 * @unit_base;
				margin-right: 0;
				&::before {
					border-radius: 40 * @unit_base;
					width: 80 * @unit_base;
				}

				&::after {
					.mask-size(80 * @unit_base, 80 * @unit_base);
					.mask-repeat(none);
					.mask-position(center center);
				}
			}
			&.ui-btn-text-light {
				&::before {
					border-radius: 10 * @unit_base;
					width: 116 * @unit_base;
					height: 65 * @unit_base;
				}
			}
		}
	}

	input.ui-text-input {
		& ~ .ui-text-input-clear {
			right: 10 * @unit_base;
			left: 10 * @unit_base;
		}
		&:focus {
			&.ui-text-input-clear-active {
				padding-right: 40 * @unit_base;
				margin-right: -30 * @unit_base;
			}
		}
	} 

}

.ui-listview li.ui-textinput-box-with-right-button {
	padding-right: 0;
}

